# python-misc-utilities

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: QUICK_START.md  RECOMMENDATIONS.md
examples/: README.md  basic_usage.py
scripts/: README.md  batch_rename_files.py  example_datetime_processor.py  example_file_processor.py  example_string_processor.py
tests/: __init__.py  test_date_time_utils.py  test_file_operations.py  test_string_helpers.py
utils/: __init__.py  date_time_utils.py  file_operations.py  string_helpers.py
